@@ -15,6 +15,7 @@
 	* Java 7 compilation
 	* DateAndCountryOfProtection field support
 	* Pseudo-APDU support
+	* Safari Sandbox detection
 
 1.1.3 - 14 Dec 2013
 	* updated Oracle deployJava javascript
